--- a/ProAgil-App/src/app/app.component.html
+++ b/ProAgil-App/src/app/app.component.html
@@ -1,7 +1,8 @@
+<app-nav></app-nav>
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
   <h1>
-    Welcome to {{ title }}!
+    {{ title }}
   </h1>
   <app-eventos></app-eventos>
 </div>  
